--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is my first change",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,14 @@
   "bugs": {
     "url": "https://github.com/Roshan-Pandit-11/MERN--grocery/issues"
   },
-  "homepage": "https://github.com/Roshan-Pandit-11/MERN--grocery#readme"
+  "homepage": "https://github.com/Roshan-Pandit-11/MERN--grocery#readme",
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0",
+    "nodemon": "^3.1.10",
+    "zod": "^4.0.15"
+  }
 }
